--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 DB=mongodb://127.0.0.1:27017/CloudCollab?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+1.6.1
 NODE_ENV=prod
 JWT=a__long_jsonwebtoken_for_my_our_yours_app
+COOKIEEX=90
 JWTEXPIRESDELAI=90d
